tests/baselines/reference/parserIndexMemberDeclaration9.errors.txt
parserIndexMemberDeclaration9.ts(2,4): error TS1071: 'export' modifier cannot appear on an index signature.


==== parserIndexMemberDeclaration9.ts (1 errors) ====
    class C {
       export [x: string]: string;
       ~~~~~~
!!! error TS1071: 'export' modifier cannot appear on an index signature.
    }